Added Readme File

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
     body {
         margin: 0;
-        background-color: gray;
+        background-color: lightgray;
         font-size: 20px;
+        font-family: 'Courier New', Courier, monospace;
     }
     
     h1 {
@@ -123,7 +124,7 @@
         height: 60px;
         border-radius: 60px;
         box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
-        animation: cloudmove 3s infinite
+        animation: cloudmove 3s infinite;
     }
     
     .cloud:before {
@@ -157,4 +158,219 @@
         50% {
             transform: translatex(-20px);
         }
+    }
+    
+    .rainy {
+        display: block;
+        width: 100%;
+        margin-top: 100px;
+        max-height: 200px;
+    }
+    
+    .raincloud {
+        display: block;
+        margin: 0 auto;
+        background-color: grey;
+        width: 210px;
+        height: 60px;
+        border-radius: 60px;
+        box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+        animation: rainCloudMove 3s infinite
+    }
+    
+    .raincloud:before {
+        content: "";
+        display: block;
+        background-color: grey;
+        position: relative;
+        width: 70px;
+        height: 70px;
+        top: -35px;
+        left: 30px;
+        border-radius: 50%;
+    }
+    
+    .raincloud:after {
+        content: "";
+        display: block;
+        position: relative;
+        background-color: grey;
+        width: 110px;
+        height: 110px;
+        border-radius: 50%;
+        top: -140px;
+        left: 65px;
+    }
+    
+    .rain {
+        display: block;
+        width: 100%;
+    }
+    
+    .raindropContainer {
+        display: block;
+        width: 210px;
+        height: 100px;
+        margin: 0 auto;
+        position: relative;
+        z-index: -1;
+        top: -40px;
+    }
+    
+    .raindrop {
+        display: inline-block;
+        position: relative;
+        width: 17px;
+        height: 17px;
+        border-radius: 0 50% 50% 50%;
+        background-color: rgb(64, 165, 198);
+        transform: rotate(22.5);
+        animation: rainDropMoveDown 0.5s infinite;
+    }
+    
+    @keyframes rainCloudMove {
+        0% {
+            transform: translatex(20);
+        }
+        50% {
+            transform: translatex(-20px);
+        }
+    }
+    
+    @keyframes rainDropMoveSide {
+        0% {
+            transform: translatex(20);
+        }
+        100% {
+            transform: translatex(-20px);
+        }
+    }
+    
+    @keyframes rainDropMoveDown {
+        0% {
+            transform: translatey(0);
+        }
+        100% {
+            transform: translatey(100px);
+        }
+    }
+    
+    .bolt {
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        border: 10px solid rgba(0, 0, 0, 0);
+        border-bottom: 40px solid #ffdf00;
+        transform: rotateZ(30deg);
+        padding: 2px;
+        width: 0;
+        height: 0;
+        overflow: visible;
+        border-top: 0 solid;
+        border-radius: 0;
+        transform-origin: 50% 50% 0;
+        top: 28px;
+        animation: lightningStrike 4s infinite;
+    }
+    
+    .bolt:after {
+        content: "";
+        top: 25px;
+        left: 5px;
+        border: 12px solid rgba(0, 0, 0, 0);
+        border-bottom: 54px solid #ffdf00;
+        transform: rotateZ(180deg);
+        padding: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        margin: 0;
+        overflow: visible;
+        border-top: 0 solid;
+        border-radius: 0;
+        transform-origin: 50% 50% 0;
+    }
+    
+    @keyframes lightningStrike {
+        0% {
+            opacity: 0%;
+        }
+        20% {
+            opacity: 0%;
+            display: none;
+        }
+        25% {
+            opacity: 100%;
+            display: block;
+        }
+        30% {
+            opacity: 0%;
+            display: none;
+        }
+        31% {
+            opacity: 100%;
+            display: block;
+        }
+        39% {
+            opacity: 0%;
+            display: none;
+        }
+        40% {
+            opacity: 100%;
+            display: block;
+        }
+        100% {
+            opacity: 0%;
+            display: none;
+        }
+    }
+    
+    .windy {
+        display: block;
+        animation: windTranslate 3s infinite;
+    }
+    
+    .windstroke {
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        top: -35px;
+        width: 100px;
+        height: 20px;
+        border: solid 1px #000;
+        border-color: transparent transparent #000 transparent;
+        border-radius: 0 0 25px 80%/15px;
+        z-index: 1;
+        animation: windRotate 3s infinite;
+    }
+    
+    @keyframes windRotate {
+        0% {
+            transform: rotate(30deg);
+        }
+        50% {
+            transform: rotate(20deg);
+        }
+        100% {
+            transform: rotate(30deg);
+        }
+    }
+    
+    @keyframes windTranslate {
+        0% {
+            transform: translateX(0px);
+        }
+        50% {
+            transform: translateX(20px);
+        }
+        100% {
+            transform: translateX(0px);
+        }
+    }
+    
+    footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
     }
