--- a/styles.css
+++ b/styles.css
@@ -1,376 +1,461 @@
-    body {
-        margin: 0;
-        background-color: lightgray;
-        font-size: 20px;
-        font-family: 'Courier New', Courier, monospace;
+body {
+    margin: 0;
+    background-color: lightgray;
+    font-size: 20px;
+    font-family: "Courier New", Courier, monospace;
+}
+
+section {
+    overflow-x: hidden;
+    margin-bottom: 100px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: gray;
+    z-index: 100;
+}
+
+h1 {
+    text-align: center;
+}
+
+.allAnimations {
+    overflow: hidden;
+}
+
+.weather-animation {
+    display: none;
+    margin: 0 auto;
+    min-height: 200px;
+    max-height: 300px;
+    margin: 100px;
+}
+
+.weather_description_container {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.sunny {
+    display: block;
+    position: relative;
+    top: 75px;
+    bottom: 75px;
+    max-height: 250px;
+}
+
+.sun_circle {
+    margin: 0 auto;
+    display: block;
+    background-color: rgb(255, 225, 32);
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+}
+
+.sun_rays {
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    top: -150px;
+    z-index: -10;
+    background-color: orange;
+    border-radius: 5%;
+    height: 150px;
+    width: 150px;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.ray1 {
+    height: 150px;
+    width: 150px;
+    top: -150px;
+    animation-name: spin;
+}
+
+.ray2 {
+    display: block;
+    position: relative;
+    top: -300px;
+    animation-name: spin2;
+}
+
+.ray3 {
+    display: block;
+    position: relative;
+    top: -450px;
+    animation-name: spin3;
+}
+
+.ray4 {
+    display: block;
+    position: relative;
+    top: -600px;
+    animation-name: spin4;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
     }
-    
-    h1 {
-        text-align: center;
-        margin-bottom: 50px;
+
+    to {
+        transform: rotate(180deg);
     }
-    
-    .weather_description {
-        text-align: center;
+}
+
+@keyframes spin2 {
+    from {
+        transform: rotate(22.5deg);
     }
-    
-    .sunny {
+
+    to {
+        transform: rotate(202.5deg);
+    }
+}
+
+@keyframes spin3 {
+    from {
+        transform: rotate(45deg);
+    }
+
+    to {
+        transform: rotate(225deg);
+    }
+}
+
+@keyframes spin4 {
+    from {
+        transform: rotate(67.5deg);
+    }
+
+    to {
+        transform: rotate(247.5deg);
+    }
+}
+
+.cloudy {
+    display: block;
+    position: relative;
+    max-height: 200px;
+    top: 75px;
+}
+
+.cloud {
+    display: block;
+    margin: 0 auto;
+    background-color: white;
+    width: 210px;
+    height: 60px;
+    border-radius: 60px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+    animation: cloudmove 3s infinite;
+}
+
+.cloud:before {
+    content: "";
+    display: block;
+    background-color: white;
+    position: relative;
+    width: 70px;
+    height: 70px;
+    top: -35px;
+    left: 30px;
+    border-radius: 50%;
+}
+
+.cloud:after {
+    content: "";
+    display: block;
+    position: relative;
+    background-color: white;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    top: -140px;
+    left: 65px;
+}
+
+@keyframes cloudmove {
+    0% {
+        transform: translatex(20);
+    }
+
+    50% {
+        transform: translatex(-20px);
+    }
+}
+
+.sunny.cloudy .cloud {
+    position: relative !important;
+    z-index: 10 !important;
+    top: 75px;
+}
+
+.rainy {
+    display: block;
+    position: relative;
+    top: 75px;
+}
+
+.raincloud {
+    display: block;
+    margin: 0 auto;
+    background-color: grey;
+    width: 210px;
+    height: 60px;
+    border-radius: 60px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+    animation: rainCloudMove 3s infinite;
+}
+
+.raincloud:before {
+    content: "";
+    display: block;
+    background-color: grey;
+    position: relative;
+    width: 70px;
+    height: 70px;
+    top: -35px;
+    left: 30px;
+    border-radius: 50%;
+}
+
+.raincloud:after {
+    content: "";
+    display: block;
+    position: relative;
+    background-color: grey;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    top: -140px;
+    left: 65px;
+}
+
+.rain {
+    display: block;
+}
+
+.raindropContainer {
+    display: block;
+    width: 210px;
+    height: 100px;
+    margin: 0 auto;
+    position: relative;
+    z-index: -1;
+    top: -40px;
+}
+
+.raindrop {
+    display: inline-block;
+    position: relative;
+    width: 17px;
+    height: 17px;
+    border-radius: 0 50% 50% 50%;
+    background-color: rgb(64, 165, 198);
+    transform: rotate(22.5);
+    animation: rainDropMoveDown 0.5s infinite;
+}
+
+@keyframes rainCloudMove {
+    0% {
+        transform: translatex(20);
+    }
+
+    50% {
+        transform: translatex(-20px);
+    }
+}
+
+@keyframes rainDropMoveSide {
+    0% {
+        transform: translatex(20);
+    }
+
+    100% {
+        transform: translatex(-20px);
+    }
+}
+
+@keyframes rainDropMoveDown {
+    0% {
+        transform: translatey(0);
+    }
+
+    100% {
+        transform: translatey(100px);
+    }
+}
+
+.thunderstorm {
+    display: block;
+    position: relative;
+    top: 75px;
+}
+
+.bolt {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    border: 10px solid rgba(0, 0, 0, 0);
+    border-bottom: 40px solid #ffdf00;
+    transform: rotateZ(30deg);
+    padding: 2px;
+    width: 0;
+    height: 0;
+    overflow: visible;
+    border-top: 0 solid;
+    border-radius: 0;
+    transform-origin: 50% 50% 0;
+    top: 28px;
+    animation: lightningStrike 4s infinite;
+}
+
+.bolt:after {
+    content: "";
+    top: 25px;
+    left: 5px;
+    border: 12px solid rgba(0, 0, 0, 0);
+    border-bottom: 54px solid #ffdf00;
+    transform: rotateZ(180deg);
+    padding: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
+    margin: 0;
+    overflow: visible;
+    border-top: 0 solid;
+    border-radius: 0;
+    transform-origin: 50% 50% 0;
+}
+
+@keyframes lightningStrike {
+    0% {
+        opacity: 0%;
+    }
+
+    20% {
+        opacity: 0%;
+        display: none;
+    }
+
+    25% {
+        opacity: 100%;
         display: block;
-        margin: 0 auto;
-        max-width: 100%;
-        max-height: 200px;
     }
-    
-    .sun_circle {
-        margin: 0 auto;
+
+    30% {
+        opacity: 0%;
+        display: none;
+    }
+
+    31% {
+        opacity: 100%;
         display: block;
-        background-color: rgb(255, 255, 0);
-        border-radius: 50%;
-        height: 150px;
-        width: 150px;
     }
-    
-    .sun_rays {
-        margin: 0 auto;
+
+    39% {
+        opacity: 0%;
+        display: none;
+    }
+
+    40% {
+        opacity: 100%;
         display: block;
-        position: relative;
-        top: -150px;
-        z-index: -100;
-        background-color: orange;
-        border-radius: 5%;
-        height: 150px;
-        width: 150px;
-        animation-duration: 5000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
     }
-    
-    .ray1 {
-        height: 150px;
-        width: 150px;
-        top: -150px;
-        animation-name: spin;
+
+    100% {
+        opacity: 0%;
+        display: none;
     }
-    
-    .ray2 {
-        display: block;
-        position: relative;
-        top: -300px;
-        animation-name: spin2;
+}
+
+.wind {
+    display: block;
+    animation: windTranslate 3s infinite;
+}
+
+.windstroke {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    top: -35px;
+    width: 100px;
+    height: 20px;
+    border: solid 1px #000;
+    border-color: transparent transparent #000 transparent;
+    border-radius: 0 0 25px 80%/15px;
+    z-index: 1;
+    animation: windRotate 3s infinite;
+}
+
+@keyframes windRotate {
+    0% {
+        transform: rotate(30deg);
     }
-    
-    .ray3 {
-        display: block;
-        position: relative;
-        top: -450px;
-        animation-name: spin3;
+
+    50% {
+        transform: rotate(20deg);
     }
-    
-    .ray4 {
-        display: block;
-        position: relative;
-        top: -600px;
-        animation-name: spin4;
+
+    100% {
+        transform: rotate(30deg);
     }
-    
-    @keyframes spin {
-        from {
-            transform: rotate(0deg);
-        }
-        to {
-            transform: rotate(180deg);
-        }
+}
+
+@keyframes windTranslate {
+    0% {
+        transform: translateX(0px);
     }
-    
-    @keyframes spin2 {
-        from {
-            transform: rotate(22.5deg);
-        }
-        to {
-            transform: rotate(202.5deg);
-        }
+
+    50% {
+        transform: translateX(20px);
     }
-    
-    @keyframes spin3 {
-        from {
-            transform: rotate(45deg);
-        }
-        to {
-            transform: rotate(225deg);
-        }
+
+    100% {
+        transform: translateX(0px);
     }
-    
-    @keyframes spin4 {
-        from {
-            transform: rotate(67.5deg);
-        }
-        to {
-            transform: rotate(247.5deg);
-        }
-    }
-    
-    .cloudy {
-        display: block;
-        width: 100%;
-        margin-top: 100px;
-        max-height: 200px;
-    }
-    
-    .cloud {
-        display: block;
-        margin: 0 auto;
-        background-color: white;
-        width: 210px;
-        height: 60px;
-        border-radius: 60px;
-        box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
-        animation: cloudmove 3s infinite;
-    }
-    
-    .cloud:before {
-        content: "";
-        display: block;
-        background-color: white;
-        position: relative;
-        width: 70px;
-        height: 70px;
-        top: -35px;
-        left: 30px;
-        border-radius: 50%;
-    }
-    
-    .cloud:after {
-        content: "";
-        display: block;
-        position: relative;
-        background-color: white;
-        width: 110px;
-        height: 110px;
-        border-radius: 50%;
-        top: -140px;
-        left: 65px;
-    }
-    
-    @keyframes cloudmove {
-        0% {
-            transform: translatex(20);
-        }
-        50% {
-            transform: translatex(-20px);
-        }
-    }
-    
-    .rainy {
-        display: block;
-        width: 100%;
-        margin-top: 100px;
-        max-height: 200px;
-    }
-    
-    .raincloud {
-        display: block;
-        margin: 0 auto;
-        background-color: grey;
-        width: 210px;
-        height: 60px;
-        border-radius: 60px;
-        box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
-        animation: rainCloudMove 3s infinite
-    }
-    
-    .raincloud:before {
-        content: "";
-        display: block;
-        background-color: grey;
-        position: relative;
-        width: 70px;
-        height: 70px;
-        top: -35px;
-        left: 30px;
-        border-radius: 50%;
-    }
-    
-    .raincloud:after {
-        content: "";
-        display: block;
-        position: relative;
-        background-color: grey;
-        width: 110px;
-        height: 110px;
-        border-radius: 50%;
-        top: -140px;
-        left: 65px;
-    }
-    
-    .rain {
-        display: block;
-        width: 100%;
-    }
-    
-    .raindropContainer {
-        display: block;
-        width: 210px;
-        height: 100px;
-        margin: 0 auto;
-        position: relative;
-        z-index: -1;
-        top: -40px;
-    }
-    
-    .raindrop {
-        display: inline-block;
-        position: relative;
-        width: 17px;
-        height: 17px;
-        border-radius: 0 50% 50% 50%;
-        background-color: rgb(64, 165, 198);
-        transform: rotate(22.5);
-        animation: rainDropMoveDown 0.5s infinite;
-    }
-    
-    @keyframes rainCloudMove {
-        0% {
-            transform: translatex(20);
-        }
-        50% {
-            transform: translatex(-20px);
-        }
-    }
-    
-    @keyframes rainDropMoveSide {
-        0% {
-            transform: translatex(20);
-        }
-        100% {
-            transform: translatex(-20px);
-        }
-    }
-    
-    @keyframes rainDropMoveDown {
-        0% {
-            transform: translatey(0);
-        }
-        100% {
-            transform: translatey(100px);
-        }
-    }
-    
-    .bolt {
-        display: block;
-        position: relative;
-        margin: 0 auto;
-        border: 10px solid rgba(0, 0, 0, 0);
-        border-bottom: 40px solid #ffdf00;
-        transform: rotateZ(30deg);
-        padding: 2px;
-        width: 0;
-        height: 0;
-        overflow: visible;
-        border-top: 0 solid;
-        border-radius: 0;
-        transform-origin: 50% 50% 0;
-        top: 28px;
-        animation: lightningStrike 4s infinite;
-    }
-    
-    .bolt:after {
-        content: "";
-        top: 25px;
-        left: 5px;
-        border: 12px solid rgba(0, 0, 0, 0);
-        border-bottom: 54px solid #ffdf00;
-        transform: rotateZ(180deg);
-        padding: 0;
-        width: 0;
-        height: 0;
-        position: absolute;
-        margin: 0;
-        overflow: visible;
-        border-top: 0 solid;
-        border-radius: 0;
-        transform-origin: 50% 50% 0;
-    }
-    
-    @keyframes lightningStrike {
-        0% {
-            opacity: 0%;
-        }
-        20% {
-            opacity: 0%;
-            display: none;
-        }
-        25% {
-            opacity: 100%;
-            display: block;
-        }
-        30% {
-            opacity: 0%;
-            display: none;
-        }
-        31% {
-            opacity: 100%;
-            display: block;
-        }
-        39% {
-            opacity: 0%;
-            display: none;
-        }
-        40% {
-            opacity: 100%;
-            display: block;
-        }
-        100% {
-            opacity: 0%;
-            display: none;
-        }
-    }
-    
-    .windy {
-        display: block;
-        animation: windTranslate 3s infinite;
-    }
-    
-    .windstroke {
-        display: block;
-        position: relative;
-        margin: 0 auto;
-        top: -35px;
-        width: 100px;
-        height: 20px;
-        border: solid 1px #000;
-        border-color: transparent transparent #000 transparent;
-        border-radius: 0 0 25px 80%/15px;
-        z-index: 1;
-        animation: windRotate 3s infinite;
-    }
-    
-    @keyframes windRotate {
-        0% {
-            transform: rotate(30deg);
-        }
-        50% {
-            transform: rotate(20deg);
-        }
-        100% {
-            transform: rotate(30deg);
-        }
-    }
-    
-    @keyframes windTranslate {
-        0% {
-            transform: translateX(0px);
-        }
-        50% {
-            transform: translateX(20px);
-        }
-        100% {
-            transform: translateX(0px);
-        }
-    }
-    
-    footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        text-align: center;
-    }
+}
+
+.night {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: 75px;
+}
+
+.moon {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    width: 100px;
+    height: 100px;
+}
+
+.moon::after {
+    display: block;
+    content: "";
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: -26px 0px 0px 20px #fdf48c;
+    transform: rotate(-24deg);
+}
+
+.night .rainy {
+    position: relative !important;
+    top: 30px !important;
+}
+
+.night .thunderstorm {
+    position: relative !important;
+    top: 30px !important;
+}
